--- a/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
@@ -20,16 +20,17 @@
               <th scope="col">{{"dashboard.position" | translate}}</th>
               <th scope="col">{{"dashboard.mobile" | translate}}</th>
               <th scope="col">{{"dashboard.email" | translate}}</th>
-              <th scope="col">{{"postJob.location" | translate}}</th>
-              <th scope="col">{{"dashboard.shortlist" | translate}}</th>
-              <th scope="col">{{"dashboard.action" | translate}}</th>
+              <!-- <th scope="col">{{"postJob.location" | translate}}</th> -->
+              <th scope="col">Job Details</th>
+              <th scope="col">Feedback</th>
+              <!-- <th scope="col">{{"dashboard.action" | translate}}</th> -->
             </tr>
             </thead>
             <tbody>
               <ng-container *ngIf="appliedJobs?.length; else elseTemplate">
               <tr *ngFor="let item of appliedJobs">
                 <td>
-                  <a class="text-capitalize" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.user?.id, jobId: item?.job_posting?.id}" href="javascript:;">
+                  <a class="text-capitalize" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.user?.id, jobId: item?.job_posting?.id, path: 'applicants'}" href="javascript:;">
                     {{item?.user?.first_name + ' ' + item?.user?.last_name}}
                   </a>
                   </td>
@@ -38,17 +39,18 @@
                 </td>
                 <td>{{item?.user?.phone ? (item?.user?.phone | phone) : '--'}}</td>
                 <td>{{item?.user?.email ? item?.user?.email : '--'}}</td>
-                <td class="text-capitalize">
+                <!-- <td class="text-capitalize">
                   {{item?.user?.city ? item?.user?.city + ', ' : ''}}
                   {{item?.user?.state ? item?.user?.state + ', ' : ''}}
                   <span class="text-uppercase">
                     {{item?.user?.country ? item?.user?.country : ''}}
                   </span>
-                </td>
+                </td> -->
+                <td class="text-capitalize"> {{item?.job_posting?.title ? item?.job_posting?.title : '--'}}</td>
                 <td class="text-center text-capitalize">
                   <select class="form-control form-control-td" (change)="onShortListUser(item, $event?.target?.value)">
                     <option [value]="null" [selected]="true" >Select</option>
-                    <option [value]="true" [selected]="item?.short_listed == true">Shortlist</option>
+                    <option [value]="true" [selected]="item?.short_listed == true">Shortlist for Interview</option>
                     <option [value]="false">Not a Fit</option>
                   </select>
                   </td>
@@ -57,11 +59,11 @@
                    {{item?.short_listed ? 'Remove' : 'Add'}}
                   </button>
                 </td> -->
-                <td class="text-capitalize">
+                <!-- <td class="text-capitalize">
                   <button  [routerLink]="['/employer/job-candidate-matches', item?.job_posting?.id, item?.user?.id]" type="button" class="btn btn-sm btn-secondary">
                     View Score
                   </button>
-                </td>
+                </td> -->
               </tr>
             </ng-container>
             <ng-template #elseTemplate>
@@ -69,9 +71,16 @@
                 <td colspan="6">No Record Found</td>
               </tr>
             </ng-template>
-
+			
             </tbody>
           </table>
+		  <div class="d-flex justify-content-center" style="background: #f8f8f8;" *ngIf="(appliedJobMeta?.count > 0 && appliedJobMeta?.total > this.limit)">>
+					<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
+				[length]="length"
+				[pageSize]="limit"
+				[pageIndex]="page-1">
+			</mat-paginator>
+			</div>
         </div>
       </div>
     </div>
