--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -33,6 +33,7 @@
 				<label >Required</label>
 			</div>
 			<div class="py-2">
+				<!-- <button type="button" class="btn btn-fltr" (click)="handleChange($event);" id="filter_location">Job Location based User</button> -->
 				<button type="button" class="btn btn-fltr btn-fltr-active" *ngIf="selectedJob?.match_select?.experience=='0'" id="experience">{{"postJob.totalYearsOfExperience" | translate }}</button>
 				<button type="button" class="btn btn-fltr btn-fltr-active" *ngIf="selectedJob?.match_select?.sap_experience=='0'" id="sap_experience">{{"postJob.totalYearsOfSapExperience" | translate }}</button>
 				<button type="button" (click)="handleChange($event);" class="btn btn-fltr" *ngIf="selectedJob?.match_select?.domain=='0'" id="domain">{{"postJob.domainExperience" | translate }}</button>
@@ -135,6 +136,13 @@
 	</div>
     <div class="row">
       <div class="col-lg-8 col-md-7">
+		<div class="col-lg-12 mt-3">
+            <div class="clearfix">
+              <div  *ngFor="let item of postedJobCountry; let i=index" class="alert alert-find alert-dismissible " role="alert">
+                <a style="text-transform: capitalize;" (click)="ValidateByCountry(item.country,$event)"> {{item.country}} ({{item.count}})</a>
+              </div>
+            </div>
+          </div> 
         <!-- <div class="row">
           <div class="col-lg-5">
             <form class="form-inline">
@@ -173,7 +181,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-lg-7">
-                      <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches', selectedJob?.id, item?.id]">
+                      <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches/details/view']" [queryParams]="{jobId: selectedJob?.id, userId: item?.id}">
                         <h5 class="text-capitalize">
                           <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
@@ -227,7 +235,7 @@
                        Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
                       </h6>
                       <div class="mt-2">
-                        <ng-container *ngFor="let itemSub of item?.skills">
+                        <ng-container *ngFor="let itemSub of filterData(item?.skills)">
                           <span *ngIf="itemSub" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
                         </ng-container>
                       </div>
@@ -241,12 +249,18 @@
         <ng-template #elseTemplate>
           <p>No candidates available</p>
         </ng-template>
-
-        <div class="d-flex justify-content-center" *ngIf="((userMeta?.count > 0 && userMeta?.total > 25) && (userMeta?.total != userList?.length))">
+		<div class="d-flex justify-content-center" style="background: #f8f8f8;" *ngIf="((userMeta?.count > 0 && userMeta?.total > this.limit) && (userMeta?.total != userList?.length))">
+		<mat-paginator style="background: #f8f8f8;color: #000;" (page)="handlePageEvent($event)"
+    [length]="length"
+    [pageSize]="limit"
+    [pageIndex]="page-1">
+</mat-paginator>
+</div>
+        <!-- <div class="d-flex justify-content-center" *ngIf="((userMeta?.count > 0 && userMeta?.total > 25) && (userMeta?.total != userList?.length))">
           <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
             Load More
           </button>
-        </div>
+        </div> -->
         <!-- <div class="row mt-4 mb-4">
           <div class="col-lg-12">
             <div class="card job-card">
