--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -47,7 +47,7 @@
 										<div class="card profile-card">
 											<div class="d-flex">
 												<div class="pc-info">
-													<a [routerLink]="[ '/user/candidate-job-view', matchingJob?.jobs?.id ]" class="text-capitalize" href="javascript:;">
+													<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id }"  class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
@@ -71,7 +71,7 @@
 										</div>
 										<div class="matchs-info " [ngClass]="isMultipleMatches ? 'd-none' : ''" >
 											<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
-											<button (click)="onShowMissing($event)" id="missBtnVal" class="missBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
+											<button (click)="onShowMissing($event)" id="missBtnVal" class="missBtn btn-sm btn btn-fltr btn-light"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
 											<!--<button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button>-->
 											<button (click)="onReset()" class="btn btn-sm btn-light ml-1">
 												<i class="fas fa-sync"></i>
@@ -79,7 +79,7 @@
 										</div>
 									</div>
 									<!--Body Sec-->
-									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-1' : 'mt-1'">
+									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-0' : 'mt-0'">
 										<div class="score mt-5" [ngClass]="{'score-txt-green': matchingJob?.score >= 5, 'score-txt-orange': (matchingJob?.score < 5 && matchingJob?.score > 0), 'score-txt-red': (matchingJob?.score == 0)}">
 											SCORE <span>{{matchingJob?.score ? matchingJob?.score :0}}/10</span>
 										</div>
@@ -88,8 +88,8 @@
 										[moreElement]="moreElement" [userInfo]="userInfo">
 										</app-shared-job-profile-matches>
 									</div>
-									<div class="col-lg-12 info">
-										<button type="button" (click)="onToggleResumeSelectModal(true, matchingJob?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="position: absolute;bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> Apply</button>
+									<div class="col-lg-12 info" style="text-align:end;">
+										<button type="button" (click)="onToggleResumeSelectModal(true, matchingJob?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> Apply</button>
 									</div>
 								</div>
 							</div>
@@ -100,7 +100,7 @@
 										<div class="card profile-card">
 											<div class="d-flex">
 												<div class="pc-info">
-													<a [routerLink]="[ '/user/candidate-job-view', matchingJobNew?.jobs?.id ]" class="text-capitalize" href="javascript:;">
+													<a  [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id }" class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJobNew?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
@@ -124,7 +124,7 @@
 										</div>
 										<div class="matchs-info "  [ngClass]="isMultipleMatches ? 'd-none' : ''" >
 										  <button (click)="onShowMatches()" class="matchBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
-										  <button (click)="onShowMissing()" class="missBtn btn-sm btn btn-fltr btn-light btn-fltr-active"><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
+										  <button (click)="onShowMissing()" class="missBtn btn-sm btn btn-fltr btn-light "><img src="assets/images/missing-icon.png" width="15px" class="ml-2"> Missing </button>
 										  <!-- <button (click)="onShowMore()" class="moreBtn btn btn-sm btn-light"><img src="assets/images/info-icon.png"  width="16px">More Skills </button> -->
 										  <button (click)="onReset()" class="btn btn-sm btn-light ml-1">
 										  <i class="fas fa-sync"></i>
@@ -132,7 +132,7 @@
 										</div>
 									</div>
 									<!--Body Sec-->
-									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-1' : 'mt-1'">
+									<div class="col-lg-12 info" [ngClass]="isMultipleMatches ? 'mt-0' : 'mt-0'">
 										<div class="score" [ngClass]="{'score-txt-green': matchingJobNew?.score >= 5, 'score-txt-orange': (matchingJobNew?.score < 5 && matchingJobNew?.score > 0), 'score-txt-red': (matchingJobNew?.score == 0)}">
 											SCORE <span>{{matchingJobNew?.score ? matchingJobNew?.score : 0}}/10</span>
 										</div>
@@ -141,8 +141,8 @@
 										[moreElement]="moreElement" [userInfo]="userInfo">
 										</app-shared-job-profile-matches>
 									</div>
-									<div class="col-lg-12 info">
-										<button type="button" (click)="onToggleResumeSelectModal(true, matchingJobNew?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="position: absolute;bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> Apply</button>
+									<div class="col-lg-12 info" style="text-align:end;">
+										<button type="button" (click)="onToggleResumeSelectModal(true, matchingJobNew?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> Apply</button>
 									</div>
 								</div>
 							</div>
