--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -17,57 +17,69 @@
 </section>
   <!-- //Sub Header Section -->
 
-  <section class="my-5">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-md-12">
-					<!-- <div class="row"> -->
-						<!-- <div class="col-lg-12 title"> -->
-							<!-- <h2>Post Job Details</small></h2> -->
-						<!-- </div> -->
-					<!-- </div>	 -->
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="card job-card">
-								<div class="card-body">
-									<div class="row">
-										<div class="col-lg-7">
-											<h5 class="text-capitalize">{{postedJobsDetails?.title}}</h5>
-										</div>
-										<div class="col-lg-5 text-right">
-											<a class="btn btn-outline-blue btn-sm" (click)="onToggleJDModal(true)" href="javascript:;"><i class="fas fa-file-alt"></i> Description</a>
+<section class="my-5">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-md-12">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="card job-card">
+							<div class="card-body">
+								<div class="row">
+									<div class="col-lg-7">
+										<h5 class="text-capitalize">{{postedJobsDetails?.title}}</h5>
+									</div>
+									<div class="col-lg-5 text-right">
+										<a class="btn btn-outline-blue btn-sm" (click)="onToggleJDModal(true)" href="javascript:;"><i class="fas fa-file-alt"></i> Description</a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="media col-lg-6">
+										<div class="media-body">
+											<h6>{{postedJobsDetails?.company?.company ? postedJobsDetails?.company?.company : ''}}</h6>
+											<h6 class="text-capitalize">
+												{{postedJobsDetails?.city ? postedJobsDetails?.city + ', ' : ''}}
+												{{postedJobsDetails?.state ? postedJobsDetails?.state + ', ' : ''}}
+												<!-- {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}} -->
+												<span class="text-uppercase">
+													{{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
+												</span>
+											</h6>
 										</div>
 									</div>
-									<div class="media">
-										<div class="media-body">
-                      <h6>{{postedJobsDetails?.company?.company ? postedJobsDetails?.company?.company : ''}}</h6>
-                      <h6 class="text-capitalize">
-                        {{postedJobsDetails?.city ? postedJobsDetails?.city + ', ' : ''}}
-                        {{postedJobsDetails?.state ? postedJobsDetails?.state + ', ' : ''}}
-                        <!-- {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}} -->
-                        <span class="text-uppercase">
-                          {{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
-                          </span>
-
-                      </h6>
-                    </div>
+									<div class="col-lg-6" style="text-align: right;">
+										<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
+											<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / hr'}}</h6>
+										</ng-container>
+										<ng-container *ngIf="postedJobsDetails?.salary_type ==1">
+											<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual '}}</h6>
+										</ng-container>
+										<ng-container *ngIf="postedJobsDetails?.salary_type ==2">
+											<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / month'}}</h6>
+										</ng-container>
+										<ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
+											--
+										</ng-container>
+										<h6 class="text-capitalize job-cardh6">{{"postJob.remote" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.remote)}} </h6>
+										<h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}} </h6>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<app-shared-job-profile [jobInfo]="postedJobsDetails"
-          [fieldsExclude]="{salary: true, visa_sponsorship: true, end_to_end_implementation: true}">
-        </app-shared-job-profile>
 				</div>
-				<div class="col-lg-4">
-					<div class="title">
-						<h2>More Jobs</h2>
-					</div>
+				<app-shared-job-profile [jobInfo]="postedJobsDetails"
+						[fieldsExclude]="{salary: true, visa_sponsorship: true, end_to_end_implementation: true}">
+				</app-shared-job-profile>
+			</div>
+			<div class="col-lg-4">
+				<div class="title">
+					<h2>More Jobs</h2>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
 
   <app-job-description
   [isRichTextEnabled]="true"
