--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -28,7 +28,8 @@
                 <a href="#" class="text-dark"> UK (7) </a>
               </div> -->
               <div  *ngFor="let item of postedJobCountry; let i=index" class="alert alert-find alert-dismissible " role="alert">
-                <a style="text-transform: capitalize;" (click)="ValidateByCountry(item.country,$event)"> {{item.country}} ({{item.count}})</a>
+                <a style="text-transform: capitalize;color: rgb(255, 41, 114);" *ngIf="postedJobCountry.length ==1 " > {{item.country}} ({{item.count}})</a>
+                <a style="text-transform: capitalize;" *ngIf="postedJobCountry.length !=1 " (click)="ValidateByCountry(item.country,$event)"> {{item.country}} ({{item.count}})</a>
               </div>
             </div>
           </div> 
@@ -65,6 +66,14 @@
                       </h6>
                       <h6>{{item?.experience ? item?.experience + ' Years Exp.' : ''}} <span *ngIf="item?.type">{{' , '}}</span>{{item?.type ? sharedService.onGetJobType(item?.type) : ''}} <span *ngIf="item?.remote" class="remote pl-2">Remote</span></h6>
                       <div class="mt-2">
+						<!-- <ng-container *ngIf="item?.hands_on_experience?.length; else elseHandsTemplate">
+							<ng-container *ngFor="let items of item?.hands_on_experience; let i = index" >
+								<span class="sap-badge"> {{items?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(items?.skill_id)?.tag) : '--'}} </span>
+							</ng-container>
+						</ng-container>
+						<ng-template #elseHandsTemplate>
+							<span  class="sap-badge">--</span>
+						</ng-template> -->
                         <ng-container *ngFor="let itemSub of item?.skills">
                           <span *ngIf="itemSub" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
                         </ng-container>
