--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -276,22 +276,19 @@
 							<div *ngIf="matchedElement && postedJobsDetails?.country == matchingUsers?.profile?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization == 2">
+							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) ">
 							<i class="fa fa-check text-green "></i>
-							{{(matchingUsers?.profile?.work_authorization || matchingUsers?.profile?.work_authorization ==
-							  0)
-							  ? (matchingUsers?.profile?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							  translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
-							  <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
+							  <!-- <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
 							<i class="fa fa-times text-danger "></i>
-							<span *ngIf="postedJobsDetails?.work_authorization == 0" >
+							<span *ngIf="postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization == 1" >
 								{{"postJob.shouldBeACitizenPr" | translate }}
 							</span>
-							<span *ngIf="postedJobsDetails?.work_authorization == 1" >
-								{{"postJob.shouldBeHavingAWorkPermit" | translate }}
+							<span *ngIf="postedJobsDetails?.work_authorization == 2" >
+								{{"postJob.shouldBeACitizenPrWork" | translate }}
 							</span>
-							  </div>
+							  </div> -->
 						</span>
 						<span *ngIf="missingElement && (matchingUsers?.profile?.work_authorization == 1 && postedJobsDetails?.country != matchingUsers?.profile?.country )">
 							 <i class="fa fa-times text-danger "></i>
@@ -744,22 +741,19 @@
 							<div *ngIf="matchedElement && postedJobsDetails?.country == matchingUsers?.profile?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization == 2">
+							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) ">
 							<i class="fa fa-check text-green "></i>
-							{{(matchingUsers?.profile?.work_authorization || matchingUsers?.profile?.work_authorization ==
-							  0)
-							  ? (matchingUsers?.profile?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							  translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
-							  <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
+							  <!-- <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
 							<i class="fa fa-times text-danger "></i>
-							<span *ngIf="postedJobsDetails?.work_authorization == 0" >
+							<span *ngIf="postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization == 1" >
 								{{"postJob.shouldBeACitizenPr" | translate }}
 							</span>
-							<span *ngIf="postedJobsDetails?.work_authorization == 1" >
-								{{"postJob.shouldBeHavingAWorkPermit" | translate }}
+							<span *ngIf="postedJobsDetails?.work_authorization == 2" >
+								{{"postJob.shouldBeACitizenPrWork" | translate }}
 							</span>
-							  </div>
+							  </div> -->
 						</span>
 						<span *ngIf="missingElement && (matchingUsers?.profile?.work_authorization == 1 && postedJobsDetails?.country != matchingUsers?.profile?.country )">
 							 <i class="fa fa-times text-danger "></i>
@@ -1211,25 +1205,22 @@
 							<div *ngIf="matchedElement && postedJobsDetails?.country == matchingUsers?.profile?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization == 2">
+							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) ">
 							<i class="fa fa-check text-green "></i>
-							{{(matchingUsers?.profile?.work_authorization || matchingUsers?.profile?.work_authorization ==
-							  0)
-							  ? (matchingUsers?.profile?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							  translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
-							  <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
+							  <!-- <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
 							<i class="fa fa-times text-danger "></i>
-							<span *ngIf="postedJobsDetails?.work_authorization == 0" >
+							<span *ngIf="postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization == 1" >
 								{{"postJob.shouldBeACitizenPr" | translate }}
 							</span>
-							<span *ngIf="postedJobsDetails?.work_authorization == 1" >
-								{{"postJob.shouldBeHavingAWorkPermit" | translate }}
+							<span *ngIf="postedJobsDetails?.work_authorization == 2" >
+								{{"postJob.shouldBeACitizenPrWork" | translate }}
 							</span>
-							  </div>
+							  </div> -->
 						</span>
 						<span *ngIf="missingElement && (matchingUsers?.profile?.work_authorization == 1 && postedJobsDetails?.country != matchingUsers?.profile?.country )">
-							  <i class="fa fa-times text-danger "></i>
+							 <i class="fa fa-times text-danger "></i>
 							 {{(matchingUsers?.profile?.work_authorization || matchingUsers?.profile?.work_authorization ==
 							 0)
 							 ? (matchingUsers?.profile?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
@@ -1679,22 +1670,19 @@
 							<div *ngIf="matchedElement && postedJobsDetails?.country == matchingUsers?.profile?.country">
 							<i class="fa fa-check text-green "></i>  I am a Citizen
 							  </div>
-							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) && postedJobsDetails?.work_authorization == 2">
+							  <div *ngIf="matchedElement && postedJobsDetails?.country != matchingUsers?.profile?.country && checkCountry(postedJobsDetails?.country) ">
 							<i class="fa fa-check text-green "></i>
-							{{(matchingUsers?.profile?.work_authorization || matchingUsers?.profile?.work_authorization ==
-							  0)
-							  ? (matchingUsers?.profile?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" |
-							  translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+							{{"postYourResume.iHaveWorkAuthorization" | translate}}
 							  </div>
-							  <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
+							  <!-- <div *ngIf="missingElement && postedJobsDetails?.country != matchingUsers?.profile?.country && (postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization ==1) && postedJobsDetails?.work_authorization != 2 ">
 							<i class="fa fa-times text-danger "></i>
-							<span *ngIf="postedJobsDetails?.work_authorization == 0" >
+							<span *ngIf="postedJobsDetails?.work_authorization == 0 || postedJobsDetails?.work_authorization == 1" >
 								{{"postJob.shouldBeACitizenPr" | translate }}
 							</span>
-							<span *ngIf="postedJobsDetails?.work_authorization == 1" >
-								{{"postJob.shouldBeHavingAWorkPermit" | translate }}
+							<span *ngIf="postedJobsDetails?.work_authorization == 2" >
+								{{"postJob.shouldBeACitizenPrWork" | translate }}
 							</span>
-							  </div>
+							  </div> -->
 						</span>
 						<span *ngIf="missingElement && (matchingUsers?.profile?.work_authorization == 1 && postedJobsDetails?.country != matchingUsers?.profile?.country )">
 							 <i class="fa fa-times text-danger "></i>
